# ragcli

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  cliff.toml
.github/workflows/: cargo-test.yml
docs/: otel-implementation-checklist.md
src/: agent.rs  app.rs  citation.rs  cli.rs  config.rs  fsutil.rs  graph.rs  ingest.rs  jsonutil.rs  main.rs  models.rs  retrieval.rs  rewrite.rs  source_kind.rs  store.rs  telemetry.rs  test_support.rs  ui.rs
src/commands/: config.rs  doctor.rs  index.rs  maintenance.rs  mod.rs  query.rs  sources.rs  stat.rs
src/query/: execute.rs  mod.rs  render.rs  rerank.rs  retrieve.rs  runtime.rs  types.rs
tests/: e2e_doctor.rs  e2e_query.rs  e2e_store_lifecycle.rs  json_output.rs  live_ollama_smoke.rs
tests/cassettes/: ollama-chat-success.vcr.json
tests/support/: mod.rs
