[package]
name = "ragcli"
version = "0.1.0"
edition = "2021"

description = "CLI for local RAG (storage layout + plumbing)"

[package.metadata.release]
allow-branch = ["main"]
sign-commit = false
sign-tag = false
push = true
publish = false
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
pre-release-commit-message = "release: {{version}}"
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md"]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
lancedb = "0.26"
pdf-extract = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "2"
xdg = "2"

# Arrow types for constructing record batches.
arrow-array = "57"
arrow-schema = "57"

[dev-dependencies]
reqwest-middleware = "0.4"
reqwest-vcr = { version = "0.4", default-features = false, features = ["reqwest-0_12"] }
tempfile = "3"
