[package]
name = "ragcli"
version = "0.1.0"
edition = "2021"

description = "CLI for local RAG"

[package.metadata.release]
allow-branch = ["main"]
sign-commit = false
sign-tag = false
push = true
publish = false
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
pre-release-commit-message = "release: {{version}}"
pre-release-hook = ["git-cliff", "--tag", "v{{version}}", "-o", "CHANGELOG.md"]

[dependencies]
anyhow = "1"
atomicwrites = "0.4"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
csv = "1"
futures = "0.3"
globset = "0.4"
html2text = "0.13"
indicatif = "0.17"
console = "0.15"
comfy-table = "7.2"
textwrap = "0.16"
lancedb = "0.26"
pdf-extract = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
walkdir = "2"
xdg = "2"

# Arrow types for constructing record batches.
arrow-array = "57"
arrow-schema = "57"
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.32.1", default-features = false }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "http-proto", "grpc-tonic", "reqwest-blocking-client", "tls-roots"] }

[dev-dependencies]
reqwest-middleware = "0.4"
reqwest-vcr = { version = "0.4", default-features = false, features = ["reqwest-0_12"] }
tempfile = "3"
